--- a/m1/w2/progetto/assets/css/stile.css
+++ b/m1/w2/progetto/assets/css/stile.css
@@ -177,8 +177,9 @@ nav{
 }
 
 #foto-notebook{
-    margin-top: 25px;
-    margin-left: 25px;
+    margin-top: 10%;
+    margin-left: 10%;
+    width:80%;
 }
 
 
